src/test/deca/context/valid/sansObjet/BoolAssign.deca
{
    boolean a,b,c,d;
    a = false;
    b= true;
    c = false;
    a = c && b;
}