src/test/deca/context/invalid/sansObjet/BadUseOfAndWithFloat.deca
{
    float b;
    b = true && false;
}